--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.13.0
+  http: ^1.3.0
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
+  font_awesome_flutter: ^10.8.0
+  cloud_firestore: ^5.6.6
+  google_fonts: ^6.1.0
+  cached_network_image: ^3.4.1
+  intl: ^0.20.2
+  image_picker: ^1.1.2
+  google_mlkit_text_recognition: ^0.15.0
+  google_mlkit_image_labeling: ^0.14.1
+  share_plus: ^11.0.0
+  firebase_storage: ^12.4.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -45,6 +60,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,9 +74,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
+    - assets/icons/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -87,3 +104,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo.png"
